@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2006-01-21 17:42:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-150
+
+    Summary:
+      web.server, only one thread (worker and listener are the same)
+    Revision:
+      itools--main--0.12--patch-150
+
+
+    modified files:
+     Changelog web/server.py
+
+
 2006-01-21 17:14:30 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-149
 
     Summary:
